ingress-nginx/canary/prod-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-demo
spec:
  selector:
    matchLabels:
      app: prod-demo
  template:
    metadata:
      labels:
        app: prod-demo
    spec:
      containers:
      - name: prod-demo
        image: mirrorgooglecontainers/echoserver:1.10
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: prod-demo
spec:
  selector:
    app: prod-demo
  ports:
  - port: 80
    targetPort: 8080
